css/widgets.less
// -----------------------------
// Widgets
// -----------------------------

.widget.image {
	margin: 0 0 10px;
	// border: 1px solid darken(@color-swatch7,10%);
	span.image-title,
	span.image-description {
		text-align: left;
		margin: 5px 0;
	}
	span.image-title {
		font-family: @font-swatch4-font-family;
		font-size: @font-swatch4-font-size;
		font-weight: @font-swatch4-font-weight;
		line-height: @font-swatch4-line-height;
		letter-spacing: @font-swatch4-letter-spacing;
		color: @font-swatch4-color;
	}
	span.image-description {
		font-family: @font-swatch5-font-family;
		font-size: 14px;
		font-weight: @font-swatch5-font-weight;
		line-height: 20px;
		letter-spacing: @font-swatch5-letter-spacing;
		color: @font-swatch5-color;
	}
}

// -----------------------------
// Forms
// -----------------------------


input, textarea,
.widget.profile form fieldset input,
.signupform fieldset input,
select {
	border: 1px solid fade(@color-swatch3, 15%);
	text-indent: 5px;
	background-color: white;
	width: 70%;
	@media @mobile {
	    width: 100%;
	    margin-bottom: 10px;
	}
}

input:focus, textarea:focus, .widget.profile form fieldset input:focus {
	border: 1px solid fade(@color-swatch3, 25%);
	box-shadow: 0px 0px 3px fade(@color-swatch3, 10%);
	background-color: white;
}

input[type=text],
input[type=email],
.widget.profile form fieldset input,
textarea,
.widget.ecomcheckout .delivery select {
	// Styles here
	//
	-webkit-appearance: none;
	-moz-appearance: none;
}


.widget.ecomcheckout .delivery select {
}

// Contact, Signup, Profile, Delivery
.signupform,
.widget.profile form,
.contactform form,
.advancedcontactform form,
.bottom-profile .widget.profile form,
.delivery,
.blog-search-form{
    background-color: fade(@color-swatch3, 5%);
	border-left: 1px solid fade(@color-swatch2, 50%);
	padding: 20px;
	fieldset {
		margin: 0;
		input {
		}
	}
	button {
        width: 30%;
        @media @mobile {
            width: 100%;
        }
    }
}
// Form

label, .contactform label, .advancedcontactform label {
	font-size: @font-swatch5-font-size;
}


.contactform {
	button.btn {
		margin-top: 13px;
		float: right;
		width: 30%;
	}
}

.signupform {
	margin-bottom: 10px;
	@media @tablet {
		max-width: 100%;
	}
	@media @mobile {
		max-width: 100%;
	}
	label {
	    font-size: @font-swatch5-font-size;
	}
    fieldset input {
	    @media @mobile {
	        width: 100%;
	    }
    }
}


.ecom-productslist-products label {
	margin-bottom:0!important;
}

// -----------------------------
// Buttons
// -----------------------------

// Overrides
.widget.button button {
	margin: 10px 0;
}

// General
.widget.button button,
.widget.profile form button, 
.contactform button.btn, 
.btn,
.blogsearch form button, 
.checkout-order-button, 
.checkout-empty-link,
.blog-post-more-link a,
.widget.ecombasket .ecombasket-pull,
.ecombasket-checkout-link,
.widget.ecomcheckout .checkout-order-button {
	background-color: @font-swatch7-background-color;
    color:@font-swatch7-color;
    padding: 0 30px;
    height: 40px;
    //width: 30%;
    border: 0;
	&:hover {
		background-color:@font-swatch7-background-color-hover;
		text-decoration: none;
	}
	@media @mobile {
        width: 100%;
    }
}

.blog-list-footer a {
	background-position: top 11px right 5px;
	background-size: 15px;
	color: @font-swatch7-color;
	font-family: @font-swatch7-font-family;
	font-size: @font-swatch7-font-size;
	font-weight: @font-swatch7-font-weight;
	line-height: @font-swatch7-line-height;
	letter-spacing: @font-swatch7-letter-spacing;
	background-color:transparent;
    padding:0;
    background-image: image('/images/button-arrow.png');
	background-repeat: no-repeat;
	&:hover {
		background-color:transparent!important;
		text-decoration: underline!important;
	}
}

.blog-post-more-link a {
	padding: 10px 30px;
}

.widget.clicktocall a {
	@media @mobile {
		padding: 15px 20px 15px 40px;
		color:@font-swatch9-color;
		&:hover {
			padding:15px 20px 15px 40px;
		}
	}
}

.widget.tweet a, .widget.dropbox button, .widget.paypalbuynow .widget.button.paypal {
	padding: 15px 20px 15px 40px;
	background-color:@font-swatch7-background-color!important;
    color:@font-swatch6-color;
    &:hover {
    	background-color: @font-swatch7-background-color-hover!important;
    	text-decoration: none!important;
    }
}


// PayPal, Dropbox, Tweet Overrides
.widget.paypalbuynow .widget.button.paypal,
.widget.tweet a,
.widget.dropbox button {
	// Styles here
	//
}

.widget.paypalbuynow .widget.button.paypal {
}

// Tweet
.widget.tweet {
}

// Dropbox
.widget.dropbox {
	button {
		background-position: top 17px left 10px;
		background-color:@font-swatch7-background-color;
	}
	.file-name {
		margin-left: 10px;
		&:before {
			content: '\2190';
			margin-right: 10px;
		}
	}
}

// -----------------------------
// Twitter Feed
// -----------------------------

.widget.twitter {
	margin: 20px 0;
	ul {
		border:1px solid @color-swatch7;
		padding: 0px 20px 1px 20px;
	}
	.bk-full-name {
		font-size: bkscale(@font-swatch5-font-size, 1.1);
	}
	img {
	}
	p {
		color: @color-swatch4;
		padding: 0;
	}	
	li {
		border-bottom: 1px solid @color-swatch7;
		padding: 20px 0px;
		margin: 20px 0px;
		&:last-child {
			border-bottom:0;
		}
	}
	ul li a:hover {
		text-decoration: none;
	}
	li:last-child {
		padding-bottom: 0;
	}
	span {
	}
	// Tweet Content
	.twitter-content {
		// Extra Info
		time {
			display: none;
		}
	}
}

.twitter .twitter-content p a {
	text-decoration: underline;
}

.widget.profile ul.twitter {
	.clearfix
}

.widget.profile ul.twitter p {
	text-align:left;
	@media @tablet {
		text-align:center;
	}
}

.twitter ul li a {
	font-size: @font-swatch5-font-size;
	font-weight:400;
}

// -----------------------------
// Line
// -----------------------------

.widget.line {
	padding: 0;
	hr {
		// margin: 40px 0;
		&.line {
			
		}
	}
}
/* ... */

